--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "Lutachu CSS Framework",
+  "name": "Lutachu",
   "author": "Lingoys!Art",
-  "homepage": "http://lutachu.org",
+  "homepage": "http://github.com/lingoys/lutachu",
   "description": "A CSS Framework based on Stylus.",
   "version": "0.1.0",
-
   "keywords": [
     "CSS",
     "Framework",
     "Stylus"
   ],
-
   "repository": {
     "type": "git",
     "url": "git://github.com/lingoys/Lutachu.git"
   },
-
   "bugs": {
     "url": "https://github.com/lingoys/Lutachu/issues"
   },
-
   "devDependencies": {
-    "stylus": "0.49.x"
+    "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
+    "gulp-stylus": "^2.0.1"
   },
-
   "license": {
     "type": "MIT",
     "url": "https://github.com/lingoys/Lutachu/blob/master/LICENSE"
