--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "license": {
     "type": "MIT",
     "url": "https://github.com/lingoys/Lutachu/blob/master/LICENSE"
+  },
+  "dependencies": {
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-livereload": "^3.8.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4"
   }
 }
