--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "del": "^1.2.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.2.0",
