--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^2.0.1"
   }
 }
