--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "keywords": [
     "CSS",
     "Framework",
-    "Stylus",
-    "Sass"
+    "Stylus"
   ],
   "repository": {
     "type": "git",
@@ -20,16 +19,15 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "del": "^1.2.1",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.3.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.2.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-stylus": "^2.0.1",
-    "yargs": "^3.25.0"
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-stylus": "^2.3.0"
   }
 }
