Lutachu: Fix building bug

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build-docs-stylus": "stylus --compress docs/assets/stylus/docs.styl --out docs/assets/css/docs.min.css",
     "build-stylus": "stylus src/lutachu.styl --out dist",
     "build-stylus-min": "stylus --compress --sourcemap src/lutachu.styl --out dist/lutachu.min.css",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist && mkdir dist",
+    "docs-dist": "rm -rf docs/dist && cp -a dist docs",
     "fonts": "cp -a fonts dist",
     "pre-push": "npm run build",
     "watch-docs": "npm run build-docs-stylus -- --watch",
